--- a/J3DModelViewer/View/MainWindow.xaml
+++ b/J3DModelViewer/View/MainWindow.xaml
@@ -56,6 +56,8 @@
                 <MenuItem Header="Show _Pivot" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.ShowPivot}"/>
                 <MenuItem Header="Show _Grid" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.ShowGrid}"/>
                 <Separator/>
+                <MenuItem Header="Animate _Light" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.AnimateLight}"/>
+                <Separator/>
                 <MenuItem Header="Show Bounds (_Box)" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.ShowBoundingBox}"/>
                 <MenuItem Header="Show Bounds (_Sphere)" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.ShowBoundingSphere}"/>
                 <MenuItem Header="Show B_ones" IsCheckable="True" IsChecked="{Binding Path=ViewOptions.ShowBones}"/>
